Removed deprecated methods and added connection timeout