@@ -5,7 +5,9 @@ import org.bukkit.Bukkit;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLConnection;
 
 public class UpdateChecker {
 
@@ -16,8 +18,11 @@ public class UpdateChecker {
 
     public String getLatestVersionGist() {
         try {
-            URL url = new URL("https://gist.githubusercontent.com/dxvampi/729bae6d34b462a89eb1b909ba562e03/raw/version.txt");
-            try (BufferedReader reader = new BufferedReader(new InputStreamReader(url.openStream()))) {
+            URL url = URI.create("https://gist.githubusercontent.com/dxvampi/729bae6d34b462a89eb1b909ba562e03/raw/version.txt").toURL();
+            URLConnection connection = url.openConnection();
+            connection.setConnectTimeout(5000);
+            connection.setReadTimeout(3000);
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
                 return reader.readLine().trim();
             }
         } catch (Exception e) {
